--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>تحضير الطلاب / لوحة المعلّم</title>
 
+  <!-- خطوط Google -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@700&family=Tajawal:wght@400;700;800&display=swap" rel="stylesheet">
+
+  <!-- مكتبة Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- ربط ملف CSS خارجي (محتوى CSS يكون في styles.css منفصل) -->
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<header class="madina">
+  <div class="brand">
+    <img src="logo.PNG" class="logo" alt="شعار حلقات المسجد النبوي">
+    <h1>حلقة المعلمة فطومة / الفجر</h1>
+    <p class="subtitle">لحفظ القرآن الكريم والمتون العلمية</p>
+  </div>
+</header>
+
+<main>
+  <div class="card toolbar">
+    <div>
+      <span class="muted">الوقت الآن (مكة): </span><span id="now" class="badge">--:--:--</span>
+      <span id="gate" class="badge" style="margin-inline-start:8px">الحالة: —</span>
+    </div>
+    <div class="row">
+      <button id="btnShowLogin" class="btn alt">دخول المعلّم</button>
+      <button id="btnLogout" class="btn" style="display:none;background:#b34b57">خروج</button>
+    </div>
+  </div>
+
+  <section id="student-form" class="card">
+    <h2>تحضير الطالب</h2>
+    <form id="form" autocomplete="off" class="form-grid">
+      <div class="form-group">
+        <label>١) اسم الطالب</label>
+        <input id="name" required placeholder="مثال: أحمد بن خالد"/>
+      </div>
+      <div class="form-group">
+        <label>٢) مقدار الحفظ</label>
+        <input id="hifz" required placeholder="مثال: سورة الكهف ١–١١"/>
+      </div>
+      <div class="form-group">
+        <label>٣) المراجعة</label>
+        <input id="mur" required placeholder="مثال: نصف جزء عم"/>
+      </div>
+      <div class="form-group">
+        <label>٤) هل تم الاستماع إلى الشيخ؟</label>
+        <div class="switch">
+          <label><input type="radio" name="listened" value="نعم" required> نعم</label>
+          <label><input type="radio" name="listened" value="لا"> لا</label>
+        </div>
+      </div>
+      <div class="form-group full-width">
+        <label>ملاحظات (اختياري)</label>
+        <textarea id="notes" placeholder="أي ملاحظات للمعلم…"></textarea>
+      </div>
+      <div class="row" style="margin-top:12px; grid-column: 1 / -1;">
+        <button type="submit" class="btn">إرسال للمعلّم</button>
+        <span id="ok" class="muted" style="color:#23935c;display:none">تم الحفظ بنجاح</span>
+        <span id="err" class="muted" style="color:#c0392b;display:none"></span>
+      </div>
+      <p class="muted" style="margin:10px 0 0">النافذة المسموحة: ٤:٠٠–٦:٠٠ فجراً (بتوقيت مكة)</p>
+    </form>
+  </section>
+
+  <section id="login-box" class="card">
+    <h2>تسجيل دخول المعلّم</h2>
+    <div class="row">
+      <input id="email" type="email" placeholder="بريد المعلّم">
+      <input id="password" type="password" placeholder="كلمة المرور">
+      <button id="btnLogin" class="btn alt">دخول</button>
+    </div>
+    <div id="lerr" class="muted" style="color:#c0392b;margin-top:8px"></div>
+  </section>
+
+  <section id="teacher-panel" class="card">
+    <h2>لوحة المعلّم</h2>
+    <div class="row" style="justify-content:space-between;margin-bottom:8px">
+      <div class="row">
+        <label>من: <input id="from" type="date"></label>
+        <label>إلى: <input id="to" type="date"></label>
+        <button id="btnFilter" class="btn alt">تصفية</button>
+        <button id="btnToday" class="btn gray">اليوم</button>
+        <button id="btnLast7" class="btn gray">آخر 7 أيام</button>
+      </div>
+      <div class="row">
+        <button id="btnExport" class="btn green">تصدير CSV</button>
+      </div>
+    </div>
+    <p class="muted" id="count"></p>
+    <div style="overflow:auto;max-height:70vh">
+      <table id="tbl">
+        <thead>
+          <tr><th>التاريخ (مكة)</th><th>الاسم</th><th>الحفظ</th><th>المراجعة</th><th>الاستماع</th><th>ملاحظات</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </section>
+
+</main>
+
+<!-- ربط ملف الجافاسكربت الخارجي (ضع كل من script.js و styles.css في نفس المجلد) -->
+<script src="script.js"></script>
+</body>
+</html>
