--- a/index.html
+++ b/index.html
@@ -111,5 +111,8 @@
 
 <!-- ربط ملف الجافاسكربت الخارجي (ضع كل من script.js و styles.css في نفس المجلد) -->
 <script src="script.js"></script>
+  <footer class="site-footer">
+  <p>تم تطوير هذا الموقع باجتهاد شخصي من الطالبة / جواهر الحربي &mdash; لأغراض تعليمية</p>
+</footer>
 </body>
 </html>
