--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <span id="ok" class="muted" style="color:#23935c;display:none">تم الحفظ بنجاح</span>
         <span id="err" class="muted" style="color:#c0392b;display:none"></span>
       </div>
-      <p class="muted" style="margin:10px 0 0">النافذة المسموحة: ٤:٠٠–٦:٠٠ فجراً (بتوقيت مكة)</p>
+      <p class="muted" style="margin:10px 0 0">النافذة المسموحة: ١٢:٠٠ منتصف الليل – ٥:٠٠ فجراً (بتوقيت مكة)</p>
     </form>
   </section>
 
